# objectscript-lsp

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
objectscript-tests/inheritance/: class-keyword-inheritance.cls
objectscript-tests/variables/: subclass.cls  subclass_two.cls  testing-variable-building.cls
src/: backend_testing.rs  class.rs  common.rs  config.rs  document.rs  global_semantic.rs  lang.rs  local_semantic.rs  ls_client_structures.rs  lsp.rs  main.rs  method.rs  override_index.rs  parse_structures.rs  scope_structures.rs  scope_tree.rs  semantic.rs  server.rs  test.rs  variable.rs  workspace.rs
test_folders/: child.cls  class_extends.cls  inheritance.cls  parent.cls
tower-lsp-objectscript/: Cargo.toml
