[package]
name = "objectscript-lsp"
version = "1.0.0"
edition = "2021"

[dependencies]
tower-lsp = "0.20.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "fs"] }
tree-sitter = "0.25.10"
tree-sitter-objectscript = "1.3.1"
la-arena= "0.3.1"
# other possible languages
tree-sitter-html = "0.23.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.0"
tree-sitter-go = "0.25.0"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-java = "0.23.5"
tree-sitter-ruby = "0.23.1"
tree-sitter-php = "0.24.2"
tree-sitter-bash = "0.25.0"
tree-sitter-css = "0.25.0"
tree-sitter-json = "0.24.8"
tree-sitter-toml = "0.20.0"
tree-sitter-yaml = "0.7.2"
tree-sitter-md = "0.5.1"
tree-sitter-sql = "0.0.2"
ropey = "1.6"
anyhow = "1.0"
serde = "1.0.228"
serde_json = "1.0.145"
tempfile = "3.23.0"
dashmap = "6.1.0"
url = "2.5.7"
parking_lot = "0.12.5"
arc-swap = "1.7.1"
walkdir = "2.5.0"
[build-dependencies]
cc = "1.0"
