[package]
name = "objectscript-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-lsp = "0.20.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "fs"] }
tree-sitter = "0.25.10"
tree-sitter-objectscript = "1.3.1"
serde = "1.0.228"
serde_json = "1.0.145"
parking_lot = "0.12.5"
walkdir = "2.5.0"

